--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "@selfage/tsconfig": "^1.0.6",
     "@types/browserify": "^12.0.36",
     "@types/express": "^4.17.11",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^14.14.41",
     "@types/uglify-js": "^3.13.0",
     "express": "^4.17.1",
-    "puppeteer": "^9.0.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
@@ -56,6 +56,8 @@
     "browserify": "^17.0.0",
     "commander": "^6.2.1",
     "get-stream": "^6.0.1",
+    "mime-types": "^2.1.30",
+    "puppeteer": "^9.0.0",
     "source-map-support": "^0.5.19",
     "uglify-js": "^3.13.4"
   }
