--- a/package.json
+++ b/package.json
@@ -44,13 +44,17 @@
     "@selfage/test_runner": "^1.0.5",
     "@selfage/tsconfig": "^1.0.6",
     "@types/browserify": "^12.0.36",
+    "@types/express": "^4.17.11",
     "@types/mime-types": "^2.1.0",
     "@types/node": "^14.14.41",
     "@types/uglify-js": "^3.13.0",
+    "express": "^4.17.1",
+    "express-static-gzip": "^2.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "@selfage/cli": "^1.1.2",
+    "@selfage/message": "^1.0.5",
     "browserify": "^17.0.0",
     "commander": "^6.2.1",
     "get-stream": "^6.0.1",
