--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@selfage/element": "^1.0.1",
     "@selfage/nested_error": "^1.0.6",
     "@selfage/test_matcher": "^1.0.6",
-    "@selfage/test_runner": "^1.0.5",
+    "@selfage/test_runner": "^1.1.3",
     "@selfage/tsconfig": "^1.0.6",
     "@types/browserify": "^12.0.36",
     "@types/express": "^4.17.11",
@@ -55,6 +55,7 @@
   "dependencies": {
     "@selfage/cli": "^1.1.2",
     "@selfage/message": "^1.0.5",
+    "@selfage/puppeteer_executor_api": "^1.0.2",
     "browserify": "^17.0.0",
     "commander": "^6.2.1",
     "get-stream": "^6.0.1",
