--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfage/bundler_cli",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "CLI for bundling and running bundled frontend or backend TypeScript files.",
   "repository": {
     "type": "git",
@@ -12,6 +12,7 @@
     "Browserify",
     "Uglify",
     "Bundle",
+    "Runtime",
     "Puppeteer",
     "Browser",
     "TypeScript"
