--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfage/bundler_cli",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "CLI for bundling and running bundled frontend or backend TypeScript files.",
   "repository": {
     "type": "git",
@@ -9,6 +9,8 @@
   "keywords": [
     "Build",
     "Compile",
+    "Asset",
+    "Image",
     "Browserify",
     "Uglify",
     "Bundle",
