Add rootDir to entries config. Treat all files as relative to cwd.

--- a/web_app_entries_def.json
+++ b/web_app_entries_def.json
@@ -15,6 +15,9 @@
   "message": {
     "name": "WebAppEntries",
     "fields": [{
+      "name": "rootDir",
+      "type": "string"
+    }, {
       "name": "entries",
       "type": "WebAppEntry",
       "isArray": true
