--- a/package.json
+++ b/package.json
@@ -36,16 +36,16 @@
     "!test_suite.*"
   ],
   "assetExts": [
-    "jpg",
-    "png",
-    "gif"
+    ".jpg",
+    ".png",
+    ".gif"
   ],
   "devDependencies": {
     "@selfage/element": "^1.0.1",
     "@selfage/nested_error": "^1.0.6",
     "@selfage/test_matcher": "^1.0.6",
     "@selfage/test_runner": "^1.1.4",
-    "@selfage/tsconfig": "^1.0.6",
+    "@selfage/tsconfig": "^1.0.7",
     "@types/browserify": "^12.0.36",
     "@types/express": "^4.17.11",
     "@types/mime-types": "^2.1.0",
@@ -56,7 +56,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@selfage/cli": "^1.1.2",
+    "@selfage/cli": "^1.3.5",
     "@selfage/message": "^1.0.5",
     "@selfage/puppeteer_executor_api": "^1.0.3",
     "browserify": "^17.0.0",
