--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfage/bundler_cli",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "CLI for bundling and running bundled frontend or backend TypeScript files.",
   "repository": {
     "type": "git",
@@ -47,6 +47,7 @@
     "@selfage/test_matcher": "^1.0.6",
     "@selfage/test_runner": "^2.0.1",
     "@selfage/tsconfig": "^1.0.7",
+    "@selfage/web_app_base_dir": "^1.0.0",
     "@types/browserify": "^12.0.36",
     "@types/express": "^4.17.11",
     "@types/mime-types": "^2.1.0",
