--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfage/bundler_cli",
-  "version": "5.1.5",
+  "version": "5.1.6",
   "description": "CLI for bundling and running bundled frontend or backend TypeScript files.",
   "repository": {
     "type": "git",
@@ -42,29 +42,30 @@
   ],
   "devDependencies": {
     "@selfage/cli": "^5.0.0",
-    "@selfage/element": "^3.3.4",
+    "@selfage/element": "^3.5.0",
+    "@selfage/generator_cli": "^1.5.0",
     "@selfage/nested_error": "^1.0.6",
-    "@selfage/puppeteer_test_executor_api": "^5.0.0",
-    "@selfage/puppeteer_test_runner": "^1.1.0",
-    "@selfage/screenshot_test_matcher": "^3.1.1",
-    "@selfage/test_matcher": "^1.2.0",
+    "@selfage/puppeteer_test_executor_api": "^5.2.0",
+    "@selfage/puppeteer_test_runner": "^1.1.1",
+    "@selfage/screenshot_test_matcher": "^3.1.3",
+    "@selfage/test_matcher": "^2.0.0",
     "@selfage/test_runner": "^5.0.1",
     "@selfage/tsconfig": "^1.0.7",
     "@selfage/web_app_base_dir": "^1.0.0",
     "@types/browserify": "^12.0.36",
     "@types/express": "^4.17.11",
-    "@types/node": "^20.12.5",
+    "@types/node": "^22.5.1",
     "@types/uglify-js": "^3.17.1",
     "express": "^4.17.1",
     "express-static-gzip": "^2.1.1",
-    "typescript": "^5.4.4"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@selfage/message": "^3.1.7",
+    "@selfage/message": "^3.5.2",
     "@selfage/puppeteer_test_executor": "^5.1.4",
     "browserify": "^17.0.0",
-    "commander": "^12.0.0",
+    "commander": "^12.1.0",
     "source-map-support": "^0.5.20",
-    "uglify-js": "^3.17.4"
+    "uglify-js": "^3.19.3"
   }
 }
