--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfage/bundler_cli",
-  "version": "5.2.0",
+  "version": "5.3.0",
   "description": "CLI for bundling and running bundled frontend or backend TypeScript files.",
   "repository": {
     "type": "git",
@@ -43,12 +43,12 @@
   "devDependencies": {
     "@selfage/cli": "^5.0.0",
     "@selfage/element": "^3.5.1",
-    "@selfage/generator_cli": "^3.2.0",
+    "@selfage/generator_cli": "^4.1.0",
     "@selfage/nested_error": "^1.0.6",
     "@selfage/puppeteer_test_executor_api": "^5.2.0",
     "@selfage/puppeteer_test_runner": "^1.3.0",
     "@selfage/screenshot_test_matcher": "^3.1.3",
-    "@selfage/test_matcher": "^2.0.0",
+    "@selfage/test_matcher": "^2.1.10",
     "@selfage/test_runner": "^5.2.0",
     "@selfage/tsconfig": "^1.0.7",
     "@selfage/web_app_base_dir": "^1.0.0",
@@ -56,16 +56,17 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.5.1",
     "@types/uglify-js": "^3.17.1",
-    "express": "^4.21.1",
-    "express-static-gzip": "^2.1.8",
+    "express": "^4.21.2",
+    "express-static-gzip": "^2.2.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@selfage/message": "^3.5.6",
+    "@selfage/message": "^3.5.7",
     "@selfage/puppeteer_test_executor": "^5.2.0",
     "browserify": "^17.0.1",
     "commander": "^12.1.0",
     "source-map-support": "^0.5.20",
-    "uglify-js": "^3.19.3"
+    "uglify-js": "^3.19.3",
+    "yaml": "^2.7.0"
   }
 }
