--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfage/bundler_cli",
-  "version": "5.4.0",
+  "version": "5.4.1",
   "description": "CLI for bundling and running bundled frontend or backend TypeScript files.",
   "repository": {
     "type": "git",
@@ -33,7 +33,7 @@
     "**/*.d.ts",
     "!test_data/**",
     "!**/*_test.*",
-    "!test_suite.*"
+    "!all_tests.*"
   ],
   "assetExts": [
     ".jpg",
